--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -755,7 +755,8 @@ nav.mastnav a:focus{
     display: none;
 }
 .hide-on-desktop{
-    display: none;
+  display: none;
+  visibility: hidden;
 }
 
  .works-item a{
